k8s/k8s-deploy-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  selector:
    app: profile-service
  ports:
    - protocol: TCP
      port: 80
      name: http
