k8s/k8s-deploy-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-service
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: ssl-ehlnext-com
      hosts:
        - api-dev.ehlnext.com
  rules:
    - host: api-dev.ehlnext.com
      http:
        paths:
          - path: "/profile/*"
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
